Created debug window

--- a/imgui.ini
+++ b/imgui.ini
@@ -87,9 +87,9 @@ DockId=0x00000003,0
 
 [Window][ Inspector]
 Pos=1394,57
-Size=430,915
+Size=430,563
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000D,0
 
 [Window][ Code Editor]
 Pos=1082,567
@@ -142,6 +142,12 @@ Size=1021,466
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Debug]
+Pos=1394,622
+Size=430,350
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
 DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
@@ -155,5 +161,7 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split
         DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
           DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
           DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
-    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=430,916 Selected=0x7C689C01
+    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=430,916 Split=Y Selected=0x7C689C01
+      DockNode      ID=0x0000000D Parent=0x00000008 SizeRef=430,563 Selected=0x7C689C01
+      DockNode      ID=0x0000000E Parent=0x00000008 SizeRef=430,350 Selected=0x392A5ADD
 
