Remastered inspector world ui

--- a/imgui.ini
+++ b/imgui.ini
@@ -87,9 +87,9 @@ DockId=0x00000003,0
 
 [Window][ Inspector]
 Pos=1394,57
-Size=430,563
+Size=430,915
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000E,0
 
 [Window][ Code Editor]
 Pos=1082,567
@@ -146,22 +146,22 @@ DockId=0x00000003,0
 Pos=1394,622
 Size=430,350
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
-  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
-  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
-    DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1021,916 Split=Y
-      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
-      DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,447 Split=X Selected=0x567E8AAB
-        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=427,447 Selected=0x567E8AAB
-          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=592,447 Selected=0x4C3AEE3A
-        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
-          DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
-          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
-    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=430,916 Split=Y Selected=0x7C689C01
-      DockNode      ID=0x0000000D Parent=0x00000008 SizeRef=430,563 Selected=0x7C689C01
-      DockNode      ID=0x0000000E Parent=0x00000008 SizeRef=430,350 Selected=0x392A5ADD
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
+  DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1392,915 Split=X
+    DockNode          ID=0x00000001 Parent=0x0000000D SizeRef=369,916 Selected=0xB6EB8CBE
+    DockNode          ID=0x00000002 Parent=0x0000000D SizeRef=1453,916 Split=X
+      DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1021,916 Split=Y
+        DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
+        DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,447 Split=X Selected=0x567E8AAB
+          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
+            DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=427,447 Selected=0x567E8AAB
+            DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=592,447 Selected=0x4C3AEE3A
+          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
+            DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
+            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
+      DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=430,916 Selected=0x7C689C01
+  DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=430,915 Selected=0x7C689C01
 
