--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,57
-Size=1824,915
+Size=1920,982
 Collapsed=0
 
 [Window][Debug##Default]
@@ -86,10 +86,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][ Inspector]
-Pos=1394,57
-Size=430,915
+Pos=1550,57
+Size=370,491
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000007,0
 
 [Window][ Code Editor]
 Pos=1082,567
@@ -103,18 +103,18 @@ Collapsed=0
 
 [Window][ Objects List]
 Pos=0,57
-Size=369,915
+Size=369,982
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][ Assets Explorer]
-Pos=371,525
-Size=427,447
+Pos=371,592
+Size=370,447
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Are you sure you want to exit?]
-Pos=812,441
+Pos=860,474
 Size=370,90
 Collapsed=0
 
@@ -125,8 +125,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Code Editor]
-Pos=800,525
-Size=592,447
+Pos=743,592
+Size=805,447
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -138,30 +138,30 @@ DockId=0x00000003,0
 
 [Window][ Scene Editor]
 Pos=371,57
-Size=1021,466
+Size=1177,533
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Debug]
-Pos=1394,622
-Size=430,350
+Pos=1550,550
+Size=370,489
 Collapsed=0
 DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
-  DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1392,915 Split=X
-    DockNode          ID=0x00000001 Parent=0x0000000D SizeRef=369,916 Selected=0xB6EB8CBE
-    DockNode          ID=0x00000002 Parent=0x0000000D SizeRef=1453,916 Split=X
-      DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1021,916 Split=Y
-        DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
-        DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,447 Split=X Selected=0x567E8AAB
-          DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
-            DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=427,447 Selected=0x567E8AAB
-            DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=592,447 Selected=0x4C3AEE3A
-          DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
-            DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
-            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
-      DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=430,916 Selected=0x7C689C01
-  DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=430,915 Selected=0x7C689C01
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1920,982 Split=X
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1548,915 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000D SizeRef=369,916 Selected=0xB6EB8CBE
+    DockNode        ID=0x00000002 Parent=0x0000000D SizeRef=1177,916 Split=Y
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
+      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1824,447 Split=X Selected=0x567E8AAB
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
+          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=370,447 Selected=0x567E8AAB
+          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=805,447 Selected=0x4C3AEE3A
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
+          DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
+          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
+  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
+    DockNode        ID=0x00000007 Parent=0x0000000E SizeRef=430,491 Selected=0x7C689C01
+    DockNode        ID=0x00000008 Parent=0x0000000E SizeRef=430,489 Selected=0x392A5ADD
 
