Lights not appearing in objects list

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,164 +4,53 @@ Size=1824,915
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=734,200
-Size=635,828
-Collapsed=0
-
-[Window][Assets Explorer]
-Pos=372,567
-Size=708,405
-Collapsed=0
-
-[Window][Code Editor Window]
-Pos=743,567
-Size=639,405
-Collapsed=0
-
-[Window][Objects List]
-Pos=0,56
-Size=370,916
-Collapsed=0
-
-[Window][Inspector Window]
-Pos=1384,56
-Size=440,916
-Collapsed=0
-
-[Window][Scene Editor Window]
-Pos=371,56
-Size=1011,509
-Collapsed=0
-
-[Window][Do you want to quit?]
-Pos=782,453
-Size=370,90
-Collapsed=0
-
-[Window][Entities]
 Pos=60,60
-Size=435,506
+Size=400,400
 Collapsed=0
 
-[Window][Appearance]
-Pos=60,60
-Size=370,228
-Collapsed=0
-
-[Window][Create New Theme]
-Pos=114,530
-Size=616,289
-Collapsed=0
-
-[Window][File Explorer]
-Pos=432,113
-Size=370,489
-Collapsed=0
-
-[Window][Texture Previewer]
-Pos=60,60
-Size=370,40
-Collapsed=0
-
-[Window][Material Node Editor]
-Pos=191,106
-Size=746,411
-Collapsed=0
-
-[Window][Code Editor]
-Pos=839,525
-Size=553,447
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][Inspector]
-Pos=1454,56
-Size=370,916
-Collapsed=0
-
-[Window][Scene Editor]
-Pos=371,57
-Size=1021,466
+[Window][ Assets Explorer]
+Pos=371,480
+Size=370,492
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][ Inspector]
-Pos=1454,57
-Size=370,915
+[Window][ Code Editor]
+Pos=743,480
+Size=709,492
 Collapsed=0
-DockId=0x00000007,0
-
-[Window][ Code Editor]
-Pos=1082,567
-Size=370,405
-Collapsed=0
-
-[Window][Assets Explorer]
-Pos=372,567
-Size=708,405
-Collapsed=0
+DockId=0x00000004,0
 
 [Window][ Objects List]
 Pos=0,57
 Size=369,915
 Collapsed=0
+DockId=0x00000007,0
+
+[Window][ Scene Editor]
+Pos=371,57
+Size=1081,421
+Collapsed=0
 DockId=0x00000001,0
 
-[Window][ Assets Explorer]
-Pos=371,669
-Size=370,303
+[Window][ Inspector]
+Pos=1454,57
+Size=370,915
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,0
 
 [Window][Are you sure you want to exit?]
 Pos=812,441
 Size=370,90
 Collapsed=0
 
-[Window][]
-Pos=371,626
-Size=370,346
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][ Code Editor]
-Pos=743,669
-Size=709,303
-Collapsed=0
-DockId=0x0000000C,0
-
-[Window][ Scene Editor]
-Pos=371,57
-Size=1021,466
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][ Scene Editor]
-Pos=371,57
-Size=1081,610
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Debug]
-Pos=1454,516
-Size=370,456
-Collapsed=0
-DockId=0x00000008,0
-
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
-  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1548,915 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000D SizeRef=369,916 Selected=0xB6EB8CBE
-    DockNode        ID=0x00000002 Parent=0x0000000D SizeRef=1177,916 Split=Y
-      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1824,610 CentralNode=1 Selected=0xA951099C
-      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1824,303 Split=X Selected=0x567E8AAB
-        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=370,447 Selected=0x567E8AAB
-          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=805,447 Selected=0x4C3AEE3A
-        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
-          DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
-          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
-  DockNode          ID=0x0000000E Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
-    DockNode        ID=0x00000007 Parent=0x0000000E SizeRef=430,491 Selected=0x7C689C01
-    DockNode        ID=0x00000008 Parent=0x0000000E SizeRef=430,489 Selected=0x392A5ADD
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,982 Selected=0xB6EB8CBE
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1549,982 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1548,982 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1920,421 CentralNode=1 Selected=0xA951099C
+      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,492 Split=X Selected=0x4C3AEE3A
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=369,221 Selected=0x567E8AAB
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1549,221 Selected=0x4C3AEE3A
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=370,982 Selected=0x7C689C01
 
