--- a/imgui.ini
+++ b/imgui.ini
@@ -36,12 +36,18 @@ DockId=0x00000001,0
 Pos=1367,57
 Size=457,915
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000009,0
 
 [Window][Are you sure you want to exit?]
 Pos=812,441
 Size=370,90
 Collapsed=0
+
+[Window][Debug]
+Pos=1367,567
+Size=457,405
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
@@ -52,5 +58,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
       DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,492 Split=X Selected=0x4C3AEE3A
         DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=370,221 Selected=0x567E8AAB
         DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=622,221 Selected=0x4C3AEE3A
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=457,982 Selected=0x7C689C01
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=457,982 Split=Y Selected=0x7C689C01
+      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=457,508 Selected=0x7C689C01
+      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=457,405 Selected=0x392A5ADD
 
