--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 18.60775375366211,
-            "y": 50.543365478515625,
-            "z": -2.41499662399292
+            "x": 50.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "projection": 0,
         "target": {
-            "x": 3.5810956954956055,
-            "y": 3.0158615112304688,
-            "z": 1.502136468887329
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
         },
         "type": "camera",
         "up": {
@@ -27,8 +27,8 @@
             "z": 1.0
         },
         "bloom": true,
-        "bloomBrightness": 0.23499999940395355,
-        "bloomSamples": 18.0,
+        "bloomBrightness": 0.0,
+        "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
             "x": 1.0,
@@ -36,42 +36,5 @@
             "z": 1.0
         },
         "type": "world settings"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 255.0,
-            "g": 255.0,
-            "r": 255.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.4000000059604645,
-            "y": -1.0,
-            "z": 1.0
-        },
-        "id": -406491066,
-        "intensity": 0.5,
-        "isChild": false,
-        "light_type": 0,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 5.0,
-            "z": 3.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 22.0
-        },
-        "type": "light"
     }
 ]
