Removed old files

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,14 +9,14 @@ Size=400,400
 Collapsed=0
 
 [Window][ Assets Explorer]
-Pos=371,480
-Size=370,492
+Pos=371,517
+Size=370,455
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][ Code Editor]
-Pos=743,480
-Size=622,492
+Pos=743,517
+Size=622,455
 Collapsed=0
 DockId=0x00000004,0
 
@@ -28,15 +28,15 @@ DockId=0x00000007,0
 
 [Window][ Scene Editor]
 Pos=371,57
-Size=994,421
+Size=994,458
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][ Inspector]
 Pos=1367,57
 Size=457,915
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,0
 
 [Window][Are you sure you want to exit?]
 Pos=812,441
@@ -47,18 +47,18 @@ Collapsed=0
 Pos=1367,567
 Size=457,405
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000006,0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,982 Selected=0xB6EB8CBE
-  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1549,982 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=994,982 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1920,421 CentralNode=1 Selected=0xA951099C
-      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1920,492 Split=X Selected=0x4C3AEE3A
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=370,221 Selected=0x567E8AAB
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=622,221 Selected=0x4C3AEE3A
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=457,982 Split=Y Selected=0x7C689C01
-      DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=457,508 Selected=0x7C689C01
-      DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=457,405 Selected=0x392A5ADD
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1365,915 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=369,915 Selected=0xB6EB8CBE
+    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=1453,915 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=1824,458 Split=X
+        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=994,982 CentralNode=1 Selected=0xA951099C
+        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=457,982 Selected=0x7C689C01
+      DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=1824,455 Split=X Selected=0x4C3AEE3A
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=369,455 Selected=0x567E8AAB
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1453,455 Selected=0x4C3AEE3A
+  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=457,915 Selected=0x7C689C01
 
