Fixed lights error when loading it

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 251.7460174560547,
-            "y": 179.72323608398438,
-            "z": -32.13688659667969
+            "x": 76.4329833984375,
+            "y": 53.31654739379883,
+            "z": -2.075387716293335
         },
         "projection": 0,
         "target": {
-            "x": 206.7020263671875,
-            "y": 158.65272521972656,
-            "z": -37.33979415893555
+            "x": 29.816028594970703,
+            "y": 37.35101318359375,
+            "z": -10.557937622070313
         },
         "type": "camera",
         "up": {
@@ -92,12 +92,12 @@
         "type": "entity"
     },
     {
-        "attenuation": 9.999999747378752e-05,
+        "attenuation": 0.0,
         "color": {
             "a": 255.0,
-            "b": 229.5,
-            "g": 167.16668701171875,
-            "r": 135.99998474121094
+            "b": 0.0,
+            "g": 0.0,
+            "r": 0.0
         },
         "cutOff": 10.0,
         "direction": {
@@ -105,11 +105,11 @@
             "y": -0.17399999499320984,
             "z": 1.0
         },
-        "id": 2,
+        "id": -357420288,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 0,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 5.0,
@@ -125,6 +125,43 @@
             "x": 0.0,
             "y": 0.0,
             "z": 22.0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 255.0,
+            "b": 64.25021362304688,
+            "g": 154.88890075683594,
+            "r": 70.29278564453125
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
+        },
+        "id": -357420288,
+        "intensity": 4.061999797821045,
+        "isChild": false,
+        "light_type": 1,
+        "name": "",
+        "position": {
+            "x": 4.0,
+            "y": 22.900066375732422,
+            "z": 3.0
+        },
+        "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 0,
+            "y": 0,
+            "z": 0
         },
         "type": "light"
     }
