--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 130.27926635742188,
-            "y": 44.114837646484375,
-            "z": 1.0670511722564697
+            "x": -15.482702255249023,
+            "y": 66.77539825439453,
+            "z": 25.919891357421875
         },
         "projection": 0,
         "target": {
-            "x": 98.02813720703125,
-            "y": 34.917388916015625,
-            "z": -36.01747512817383
+            "x": -13.627054214477539,
+            "y": 17.935012817382813,
+            "z": 15.375666618347168
         },
         "type": "camera",
         "up": {
@@ -22,18 +22,18 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
-        "bloom": true,
+        "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.005434811115264893,
-            "y": 0.005434811115264893,
-            "z": 0.005434811115264893
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "type": "world settings"
     },
@@ -46,13 +46,14 @@
         "is_dynamic": false,
         "lodEnabled": false,
         "mass": 1.0,
-        "material_path": "",
-        "model_path": "project/game/terrain.obj",
-        "name": "project/game/terrain",
+        "material_path": "project/game/hwllo world.mat",
+        "mesh_type": 4,
+        "model_path": "",
+        "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 0.0,
+            "y": 0.09999990463256836,
             "z": 0.0
         },
         "relative_position": {
@@ -67,9 +68,9 @@
         },
         "roughness_texture_path": "",
         "scale": {
-            "x": 1.0,
+            "x": 100.0,
             "y": 1.0,
-            "z": 1.0
+            "z": 100.0
         },
         "script_index": "",
         "script_path": "",
@@ -84,169 +85,7 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": false,
-        "collider_type": 4,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 0,
-        "is_dynamic": false,
-        "lodEnabled": false,
-        "mass": 1.0,
-        "material_path": "",
-        "model_path": "project/game/tree.obj",
-        "name": "New Entity",
-        "normal_texture_path": "",
-        "position": {
-            "x": -180.8991241455078,
-            "y": 0.050628662109375,
-            "z": 201.3352508544922
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": false,
-        "collider_type": 4,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 0,
-        "is_dynamic": false,
-        "lodEnabled": false,
-        "mass": 1.0,
-        "material_path": "",
-        "model_path": "project/game/tree.obj",
-        "name": "New Entity",
-        "normal_texture_path": "",
-        "position": {
-            "x": -97.70543670654297,
-            "y": 14.804534912109375,
-            "z": -102.86955261230469
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": false,
-        "collider_type": 4,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 0,
-        "is_dynamic": false,
-        "lodEnabled": false,
-        "mass": 1.0,
-        "material_path": "",
-        "model_path": "project/game/tree.obj",
-        "name": "New Entity",
-        "normal_texture_path": "",
-        "position": {
-            "x": 131.6894073486328,
-            "y": 0.09356689453125,
-            "z": -156.54269409179688
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
+        "texture_path": "project/game/192357 (1080p).mp4",
         "tiling": [
             1.0,
             1.0
@@ -257,21 +96,21 @@
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
-            "b": 163.38888549804688,
-            "g": 141.87266540527344,
-            "r": 114.97737121582031
+            "b": 255.0,
+            "g": 255.0,
+            "r": 255.0
         },
         "cutOff": 10.0,
         "direction": {
             "x": 0.4000000059604645,
-            "y": -0.17399999499320984,
-            "z": 1.0
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
         },
-        "id": -766007808,
-        "intensity": 5.0,
+        "id": 2,
+        "intensity": 0.5,
         "isChild": false,
-        "light_type": 0,
-        "name": "",
+        "light_type": 1,
+        "name": "Light",
         "position": {
             "x": 4.0,
             "y": 5.0,
@@ -284,9 +123,9 @@
         },
         "specularStrength": 0.5,
         "target": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 22.0
+            "x": 0,
+            "y": 0,
+            "z": 0
         },
         "type": "light"
     }
